@@ -443,6 +443,7 @@ LISPSYM(ninth,"NINTH",lisp)
 LISPSYM(tenth,"TENTH",lisp)
 LISPSYM(rest,"REST",lisp)
 LISPSYM(nthcdr,"NTHCDR",lisp)
+LISPSYM(conses_p,"CONSES-P",system)
 LISPSYM(last,"LAST",lisp)
 LISPSYM(list,"LIST",lisp)
 LISPSYM(liststern,"LIST*",lisp)
