@@ -505,6 +505,7 @@ LISPFUNNR(ninth,1)
 LISPFUNNR(tenth,1)
 LISPFUNNR(rest,1)
 LISPFUNNR(nthcdr,2)
+LISPFUNNR(conses_p,2)
 LISPFUN(last,seclass_read,1,1,norest,nokey,0,NIL)
 LISPFUN(list,seclass_no_se,0,0,rest,nokey,0,NIL)
 LISPFUN(liststern,seclass_no_se,1,0,rest,nokey,0,NIL)
